--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -6,13 +6,52 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 1em;
+  }
+  .newsletter {
+    margin-bottom: 1em;
+  }
+  .signup-form {
+    display: flex;
+    font-size: 0.8em;
+
+    @media (min-width: $breakpoint-xs) {
+      font-size: 1em;
+    }
+    .newsletter-field {
+      &-input {
+        flex: 1 1 auto;
+
+        input {
+          border-right: 0;
+        }
+      }
+    }
+    input {
+      appearance: none;
+      background-color: var(--backgroundColor);
+      border: 1px solid var(--brandGray);
+      color: var(--text-color);
+      padding: 0.9em;
+      width: 100%;
+
+      &:focus,
+      &:focus-visible {
+        box-shadow: 0 0 10px var(--brandPink);
+        outline: none;
+      }
+    }
+    .submit-button {
+      background: url(/assets/images/smiley.png) no-repeat center/45%;
+      padding-right: 2em;
+      padding-left: 2em;
+    }
   }
   .privacy {
     font-size: 0.8em;
   }
   .social-nav {
     font-size: 1.4em;
-    margin-bottom: 1em;
 
     &-item {
       padding: 0 0 0 0.8em;
