--- a/_scss/_home.scss
+++ b/_scss/_home.scss
@@ -137,9 +137,6 @@
         margin-bottom: 6em;
       }
     }
-    .newsletter {
-      margin-bottom: 1em;
-    }
     .contact {
       align-items: center;
       background: var(--brandGradient);
@@ -148,6 +145,9 @@
       padding: 2.8em;
       position: relative;
 
+      @media (min-width: $breakpoint-lg) {
+        padding: 1em;
+      }
       .inner {
         align-items: center;
         background-color: var(--backgroundColor);
