--- a/_scss/_vars.scss
+++ b/_scss/_vars.scss
@@ -17,6 +17,7 @@
   --linkHoverColor: var(--brandPink);
 }
 
+$breakpoint-xs: 430px;
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
